# chronicles

./: .pylintrc  pyproject.toml  tox.ini
src/chronicles/: manage.py
src/chronicles/config/: settings.py  urls.py
src/chronicles/deploy/: asgi.py  wsgi.py
tests/: test_app.py
